update validate of training-program
