# src/domains/training_program/models/validate.js
@@ -4,10 +4,16 @@ const create = {
     properties: {
         name: { type: 'string', minLength: 1 },
         acronym: { type: 'string', minLength: 1 },
-        sets: { type: 'integer', minimum: 0 },
-        reps: { type: 'string', minLength: 1 },
-        temp: { type: 'string', minLength: 1 },
-        rest: { type: 'string', minLength: 1 },
+        items: {
+            type: 'object',
+            properties: {
+                sets: { type: 'integer', minimum: 0 },
+                reps: { type: 'string', minLength: 1 },
+                temp: { type: 'string', minLength: 1 },
+                rest: { type: 'string', minLength: 1 },
+            }
+        }
+
     },
     required: ['name', 'acronym', 'sets', 'reps', 'temp', 'rest']
 }
