# src/domains/training_program/router.js
@@ -5,7 +5,10 @@ const router = express.Router()
 const create_one = require('./controllers/create_one')
 const get_list = require('./controllers/get_list')
 
-router.post('/', create_one)
+const validate = require('../../middleware/check_validate')
+const dataExample = require('./models/validate')
+
+router.post('/', validate(dataExample.create), create_one)
 
 router.get('/', get_list)
 
